Eticket_platform_app

--- a/Etickets_Platform/appsettings.json
+++ b/Etickets_Platform/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnectString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=Ecommerce_app_db; integrated security=True;MultipleActiveResultSets=True;User ID=SA;Password=***********;Pooling=False;"
+  },
   "AllowedHosts": "*"
 }
+
+
